istio/AuthorizationPolicy/policies/workload-allow-same-namespace/policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-same-namespace
  namespace: default
  annotations:
    cenroq.io/displayName: "Allow Same Namespace"
    cenroq.io/description: "Allow requests to the public workload only from the same namespace."
spec:
  selector:
    matchLabels:
      app: public
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
        - default
